--- a/styles.css
+++ b/styles.css
@@ -871,7 +871,7 @@ footer a:hover {
 .whatsapp-button {
     position: fixed;
     bottom: 7rem;
-    left: 1rem;
+    right: 1rem;
     z-index: 999;
 }
 
